grammar.js
    source_file: ($) =>
      seq(
        alias(prec.right(repeat($._block_not_section)), $.section),
        repeat($.section),
      ),
    // BLOCK STRUCTURE

    // All blocks. Every block contains a trailing newline.
    _block_not_section: ($) =>
      choice(
        //$.heading,
        $.horizontal_rule,
        $._list,
        $.preformatted_block,
        $.table,
        $.paragraph, // Must be low precedence
        $._blank_line, // Consumes blank lines separating blocks
        $.syntaxhighlight,
      ),
    section: ($) =>
      choice(
        $._section1,
        $._section2,
        $._section3,
        $._section4,
        $._section5,
        $._section6,
      ),
    _section1: ($) =>
      prec.right(
        seq(
          $.heading1,
          repeat(
            choice(
              alias(
                choice(
                  $._section6,
                  $._section5,
                  $._section4,
                  $._section3,
                  $._section2,
                ),
                $.section,
              ),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section2: ($) =>
      prec.right(
        seq(
          $.heading2,
          repeat(
            choice(
              alias(
                choice($._section6, $._section5, $._section4, $._section3),
                $.section,
              ),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section3: ($) =>
      prec.right(
        seq(
          $.heading3,
          repeat(
            choice(
              alias(choice($._section6, $._section5, $._section4), $.section),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section4: ($) =>
      prec.right(
        seq(
          $.heading4,
          repeat(
            choice(
              alias(choice($._section6, $._section5), $.section),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section5: ($) =>
      prec.right(
        seq(
          $.heading5,
          repeat(choice(alias($._section6, $.section), $._block_not_section)),
        ),
      ),
    _section6: ($) => prec.right(seq($.heading6, repeat($._block_not_section))),

    _inline_content: ($) =>
      choice(
        $.comment,
        $.bold_italic, // Must come before bold and italic
        $.bold,
        $.italic,
        $.wikilink,
        $.medialink,
        $.external_link,
        $.parser_function, // Must come before template
        $.template,
        $.magic_word,
        $.signature,
        $.redirect,
        $.html_tag,
        $.entity,
        $.nowiki_inline_element, // <nowiki>content</nowiki> or <nowiki />
        // Everything else
        $.text,
      ),
    // Text is a sequence of non-special characters or characters that don't form other tokens
    // This is a fallback and should have low precedence
    text: ($) => prec(-2, $._inline_text_base),

    // More specific text tokens for contexts where fewer delimiters apply
    paragraph: ($) =>
      prec(-4, seq(repeat1($._inline_content), choice($._newline, $._eof))),
    _newline: ($) => "\n",
    _eof: ($) => token(prec(-10, "\0")), // special token for end of file, defined by tree-sitter

    // ==== Links ====
    wikilink: ($) =>
      seq(
        $._wiki_link_token,
        "[[",
        field("target", $.wikilink_page),
        optional(seq("|", field("display", $._wikilink_display_content))),
        "]]",
      ),
    wikilink_page: ($) =>
      repeat1(
        choice(
          alias($._text_no_brackets_pipes_colon_hash, $.page_name_segment), // Colon for namespace, hash for section
          $.template, // Templates can be in link targets/pages
          alias(token.immediate(prec(1, ":")), $.namespace_separator), // for interwiki/category
          alias(token.immediate(prec(1, "#")), $.section_separator),
        ),
      ),
    _text_no_brackets_pipes_colon_hash: ($) =>
      token(prec(1, /[^\[\]\|\{\}:#\n][^\[\]\|\{\}\n]*/)),

    _wikilink_display_content: ($) =>
      choice(
        alias($._text_no_brackets, $.page_name_segment), // Colon for namespace, hash for section
        $.template,
        $.bold,
        $.italic,
        $.bold_italic,
        $.html_tag,
        $.nowiki_inline_element,
        // No nested links easily in display text without complex escape logic
      ),

    _list: ($) => choice($.unordered_list, $.ordered_list, $.definition_list),

    // Content of a list item can be complex, including nested lists or paragraphs
    list_item_content: ($) =>
      prec.left(
        repeat1(
          choice(
            $._inline_content, // Inline content directly
            $._list, // Nested list
          ),
        ),
      ),

    unordered_list: ($) => prec.right(repeat1($.unordered_list_item)),
    unordered_list_item: ($) =>
      prec.right(
        seq(
          alias($.unordered_list_marker, $.list_marker),
          field("content", $.list_item_content),
          $._newline, // Items are typically one per line
        ),
      ),
    bold: ($) =>
      prec.left(
        1,
        seq(
          // dynamic precedence to help with nesting
          "'''",
          field("content", repeat($._inline_content)),
          "'''",
        ),
      ),
    italic: ($) =>
      prec.left(
        0,
        seq(
          // dynamic precedence
          "''",
          field("content", repeat($._inline_content)),
          "''",
        ),
      ),

    // Nowiki
    table: ($) =>
      seq(
        "{|",
        optional(repeat1(choice($.table_attribute, $.template, "|"))),
        "\n",
        optional($.tablecaption),
        optional(alias(repeat1($.table_header), $.colheaders)),
        optional(repeat1($.table_cell)),
        repeat($.table_row),
        "|}",
      ),
    table_cell_block: ($) =>
      seq(
        "|",
        // optional(seq(repeat1($.table_attribute), "|")),
        alias($._table_node, $.content),
        optional($._newline),
      ),
    table_cell: ($) =>
      choice(
        $.table_cell_inline, // || separated
        $.table_cell_block, // | separated
      ),
    _table_node: ($) => repeat1(choice($._inline_content)),
    table_row: ($) =>
      seq(
        "|-",
        optional(repeat1($.table_attribute)),
        "\n",
        optional(repeat1($.table_header)),
        repeat($.table_cell),
      ),
    // -----------------------------------------------------------------------------------------
    // ------------------------------------------------------------------------------ SIGNATURES
    // -----------------------------------------------------------------------------------------

    html_tag_name: ($) => $._word_chars,
    _word_chars: ($) => token(/[a-zA-Z_][a-zA-Z0-9_]*/),

    html_attribute_name: ($) => token(/[a-zA-Z_:][-a-zA-Z0-9_:.]*/),
    html_attribute_value: ($) =>
      choice(
        seq('"', field("value_text", optional(token(prec(1, /[^"]*/)))), '"'),
        seq("'", field("value_text", optional(token(prec(1, /[^']*/)))), "'"),
        // `/` is excluded so a trailing `/>` self-close is not swallowed into an
        // unquoted value (issue #6); matches the scanner's attribute validation.
        field("value_text", token(prec(1, /[^\s"'=<>`\/]+/))), // Unquoted
      ),
    html_attribute: ($) =>
      seq(
        field("name", $.html_attribute_name),
        optional(seq("=", field("value", $.html_attribute_value))),
      ),
    html_tag: ($) => choice($._self_closing_tag, $._html_generic_tag),
    _self_closing_tag: ($) =>
      seq(
        "<",
        $._html_self_closing_tag_marker,
        field("name", $.html_tag_name),
        field("attributes", optional($._html_attributes_pattern_no_gt)),
        choice(">", "/>"),
      ),

    _html_generic_tag: ($) =>
      seq(
        "<",
        $._html_tag_open_marker,
        field("name", $.html_tag_name),
        field("attributes", optional($._html_attributes_pattern_no_gt)),
        choice(
          seq(
            ">",
            field("content", repeat($._html_content)),
            "</",
            $._html_tag_close_marker,
            $.html_tag_name,
            ">",
          ),
          // Some block tags might be self-closing in wikitext context if not properly handled by MediaWiki parser
          // but typically they are not. We allow it for robustness.
          "/>",
        ),
      ),
